--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,7 +11,7 @@
     "start": "node dist/index.js",
     "test": "jest",
     "prepare": "yarn codegen",
-    "docker:build": "docker build . --no-cache -t data-feed-api --stream"
+    "docker:build": "docker build . --no-cache -t witnet/data-feed-app-api --stream"
   },
   "license": "ISC",
   "devDependencies": {
